# codeGGenerator

./: .gitignore  CHANGELOG  CMakeConfig.h.in  CMakeConfig.hpp.in  CMakeLists.txt  CodeG_1.xml  CodeG_2.xml  CodeG_3.xml  Instruction_liste.txt  README.md  gp8b_test  pong.codeG  pong.codeG.bck  pong_GP8BV4  test  test2
.github/workflows/: cmake_linux_clang.yml  cmake_linux_clang_32bit.yml  cmake_linux_clang_64bit.yml  cmake_linux_gcc8.yml  cmake_linux_gcc8_32bit.yml  cmake_linux_gcc8_64bit.yml  cmake_linux_gcc_32bit.yml  cmake_linux_gcc_64bit.yml  cmake_windows_MSVC_32bit.yml  cmake_windows_MSVC_64bit.yml  cmake_windows_i686-posix-dwarf.yml  cmake_windows_mingw-w64-i686.yml  cmake_windows_mingw-w64-x86_64.yml  cmake_windows_x86_64-posix-seh.yml
example/: model  pong  test  uart_test
include/: C_address.h  C_address.hpp  C_bus.h  C_bus.hpp  C_compilerData.h  C_compilerData.hpp  C_console.hpp  C_error.hpp  C_fileReader.hpp  C_function.hpp  C_instruction.h  C_instruction.hpp  C_keyword.h  C_keyword.hpp  C_macro.h  C_macro.hpp  C_readableBus.h  C_readableBus.hpp  C_reserved.hpp  C_string.hpp  C_stringDecomposer.h  C_stringDecomposer.hpp  C_target.h  C_target.hpp  C_value.h  C_value.hpp  C_variable.h  C_variable.hpp  main.hpp  version.hpp
src/: C_address.cpp  C_compilerData.cpp  C_console.cpp  C_fileReader.cpp  C_function.cpp  C_instruction.cpp  C_keyword.cpp  C_macro.cpp  C_readableBus.cpp  C_reserved.cpp  C_string.cpp  C_stringDecomposer.cpp  C_target.cpp  C_value.cpp  C_variable.cpp  main.cpp  version.cpp
textEditor/Notepad++/: codeG.xml
